force-app/main/default/objects/White_Space_Section__mdt/White_Space_Section__mdt.object-meta.xml
<CustomObject>
    <label>White Space Section</label>
    <pluralLabel>White Space Section</pluralLabel>
</CustomObject>