force-app/main/default/objects/White_Space_Section__mdt/fields/Collapsed_by_Default__c.field-meta.xml
<CustomField>
    <fullName>Collapsed_by_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapsed by Default</label>
    <type>Checkbox</type>
</CustomField>