force-app/main/default/objects/White_Space_Section__mdt/fields/Group_By_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_By_Field_Name__c</fullName>
    <label>Group By Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>