force-app/main/default/objects/White_Space_Section__mdt/fields/RecordId_Related_Field__c.field-meta.xml
<CustomField>
    <fullName>RecordId_Related_Field__c</fullName>
    <label>RecordId Related Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>