force-app/main/default/objects/White_Space_Section__mdt/fields/White_Space_Configuration__c.field-meta.xml
<CustomField>
    <fullName>White_Space_Configuration__c</fullName>
    <label>White Space Configuration</label>
    <referenceTo>White_Space_Configuration__mdt</referenceTo>
    <relationshipLabel>White Space Section</relationshipLabel>
    <relationshipName>White_Space_Section</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>